--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="stat-card">
                         <h3>Total Spent</h3>
-                        <p class="stat-value" id="stat-spent">$0.00</p>
+                        <p class="stat-value" id="stat-spent">0.00</p>
                     </div>
                     <div class="stat-card">
                         <h3>Top Category</h3>
@@ -48,7 +48,7 @@
                     </div>
                     <div class="stat-card">
                         <h3>Last 7 Days</h3>
-                        <p class="stat-value" id="stat-week">$0.00</p>
+                        <p class="stat-value" id="stat-week">0.00</p>
                     </div>
                 </div>
 
@@ -189,15 +189,15 @@
                 
                 <div class="settings-section">
                     <h3>Currency Settings</h3>
-                    <p>Base currency: USD</p>
+                    <p>Base currency: NGN</p>
                     <div class="currency-rates">
                         <div class="form-group">
-                            <label for="eur-rate">EUR to USD Rate:</label>
-                            <input type="number" id="eur-rate" step="0.0001" value="1.0900" min="0">
+                            <label for="usd-rate">USD to NGN Rate:</label>
+                            <input type="number" id="usd-rate" step="0.0001" value="1.0900" min="0">
                         </div>
                         <div class="form-group">
-                            <label for="gbp-rate">GBP to USD Rate:</label>
-                            <input type="number" id="gbp-rate" step="0.0001" value="1.2700" min="0">
+                            <label for="rwf-rate">RWF to NGN Rate:</label>
+                            <input type="number" id="rwf-rate" step="0.0001" value="1.2700" min="0">
                         </div>
                         <button id="save-rates-btn" class="btn btn-primary">Save Rates</button>
                     </div>
@@ -251,7 +251,7 @@
                         <li><strong>Advanced Search:</strong> Use regex patterns to search and filter transactions with real-time highlighting</li>
                         <li><strong>Budget Tracking:</strong> Set monthly budget caps and receive alerts when approaching or exceeding limits</li>
                         <li><strong>Data Visualization:</strong> View spending trends and category breakdowns on the dashboard</li>
-                        <li><strong>Multi-Currency Support:</strong> Configure exchange rates for EUR and GBP</li>
+                        <li><strong>Multi-Currency Support:</strong> Configure exchange rates for USD and RWF</li>
                         <li><strong>Data Portability:</strong> Import and export transaction data in JSON format</li>
                         <li><strong>Accessibility:</strong> Full keyboard navigation, ARIA live regions, and semantic HTML</li>
                         <li><strong>Responsive Design:</strong> Optimized for mobile, tablet, and desktop devices</li>
@@ -268,7 +268,7 @@
                     <h3>Contact</h3>
                     <p>
                         <strong>Developer:</strong> Toluwani Jephthae Oladeji<br>
-                        <strong>GitHub:</strong> <a href="https://github.com/student-finance-app" target="_blank" rel="noopener noreferrer">github.com/student-finance-app</a><br>
+                        <strong>GitHub:</strong> <a href="https://github.com/ToluwaniOladeji" target="_blank" rel="noopener noreferrer">github.com/ToluwaniOladeji</a><br>
                         <strong>Email:</strong> <a href="mailto:t.oladeji@alustudent.com">t.oladeji@alustudent.com</a>
                     </p>
 
